--- a/config/openacademy.conf
+++ b/config/openacademy.conf
@@ -4,6 +4,6 @@ db_host = 127.0.0.1
 db_port = False
 db_user = odoo
 db_password = odoo_pass
-addons_path = /home/odoo/lbs22-11/config
+addons_path = /home/odoo/lbs22-11/addons, /opt/odoo/addons
 #logfile = /var/log/odoo10_openacademy.log
 #xmlrpc_port = 8010 --if different to default port
